test/stg/error/thunk.stg
-- missing expr in thunk
main = THUNK();

